--- a/src/index.css
+++ b/src/index.css
@@ -656,4 +656,6 @@ body {
     padding-left: 250px;
     padding-bottom: 10px;
     padding-top: 10px;
+    text-decoration: none;
+    font-size: 28px;
 }
