--- a/src/index.css
+++ b/src/index.css
@@ -658,4 +658,10 @@ body {
     padding-top: 10px;
     text-decoration: none;
     font-size: 28px;
+    font-weight: 900;
+}
+
+.subtext-valenta {
+    font-weight: 100;
+    color: #bfbfbf;
 }
